# fir_filter

./: .gitignore  CMakeLists.txt  README.md  fir.c  fir.h  main.c
src/: fir.c  fir.h  taps.c
